Creando objeto en el index y agregando index.js al script de inicio en el package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest"
+    "test": "node ./node_modules/jest/bin/jest",
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
